[package]
name = "distiller"
description = "distiller is a command line tool written in rust, used for extracting comment from source code and storing the results into a queryable sqlite database."
version = "2.0.4"
authors = ["Alexis Lowe <alexis.lowe@protonmail.com>"]
edition = "2018"
repository = "https://github.com/chimbosonic/distiller/"
license = "MIT"
readme = "README.MD"
keywords = ["comment", "sqlite"]
categories = ["command-line-utilities"]


[dependencies]
comment-parser = "0.1.0"
walkdir = "2.5.0"
serde_rusqlite = "0.36.0"
serde = { version = "1.0.209", features = ["derive"] }
sha3 = "0.10.8"
log = "0.4.22"
env_logger = "0.11.5"
clap = "4.5.16"
futures = "0.3.30"
num_cpus = "1.16.0"
threadpool = "1.8.1"
rusqlite = "0.32.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
