[package]
name = "distiller"
description = "distiller is a command line tool written in rust, used for extracting comment from source code and storing the results into a queryable sqlite database."
version = "3.0.1"
authors = ["Alexis Lowe <alexis.lowe@chimbosonic.com>"]
edition = "2021"
repository = "https://github.com/chimbosonic/distiller/"
license = "MIT"
readme = "README.MD"
keywords = ["comment", "sqlite"]
categories = ["command-line-utilities"]


[dependencies]
comment-parser = "0.1.0"
walkdir = "2.5.0"
serde_rusqlite = "0.36.0"
serde = { version = "1.0.215", features = ["derive"] }
sha3 = "0.10.8"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.21", features = ["derive"] }
num_cpus = "1.16.0"
threadpool = "1.8.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
panic = "abort"